welcome.lessons.welcome.bat.bool1.PosNeg.scala.error
posNeg:2: error: not found: value negatif
  if ((a*b<=0 & negatif==false) || (negatif==true & a<=0 & b<=0)) {
                ^posNeg:2: error: not found: value negatif
  if ((a*b<=0 & negatif==false) || (negatif==true & a<=0 & b<=0)) {
                                    ^