welcome.lessons.welcome.bat.bool1.PosNeg.scala.code
def posNeg(a:Int, b:Int, negative:Boolean):Boolean = {
  if ((a*b<=0 & negatif==false) || (negatif==true & a<=0 & b<=0)) {
    return true
  } else return false
}